kubernetes/tp10/mysql-dp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-dp
  labels:
    role: mysql-dp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      name: wordpress-mysql
      labels:
        app: mysql
        type: pod
    spec:
      containers:
      - env:
        - name: MYSQL_ROOT_PASSWORD
          value: password
        - name: MYSQL_DATABASE
          value: wp-db
        - name: MYSQL_USER
          value: chris
        - name: MYSQL_PASSWORD
          value: chris
        image: mysql
        name: wp-db
        ports:
          - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql-data
      volumes:
      - name: mysql-data
        hostPath:
          path: /db-data
          type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql
spec:
  type: ClusterIP
  ports:
    - targetPort: 3306
      port: 3306
  selector:
    app: mysql
