kubernetes/tp10/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-rule
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: www.chris-webapp.com
    http:
      paths:
      - path: /red
        backend:
          service:
            name: webapp-red-svc
            port:
              number: 8080
        pathType: Prefix
      - path: /blue
        backend:
          service:
            name: webapp-blue-svc
            port:
              number: 8080
        pathType: Prefix
